js262/test/language/module-code/parse-err-decl-pos-export-class-decl-meth.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

class C { method() { export default null; } }
